# human_detection_ROSCV

./: CMakeLists.txt  CMakeLists.txt~  dji_guid.h  log.txt  package.xml  scan_examp
backup/sgbm_ros/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
backup/sgbm_ros/sample/image/: image_sub.cpp  image_sub.cpp~  image_subb.cpp  image_subb.cpp~
backup/sgbm_ros/src/: stereo_sgm.cpp
guidance/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  log.txt  package.xml  package.xml~
guidance/calibration_files/: camera_params_left.yaml  camera_params_right.yaml
guidance/calibration_files/calibration_results/: extrinsics_baseline147_data149.yml  extrinsics_left.yaml  extrinsics_right.yaml  intrinsics_front.yaml  intrinsics_rear.yaml  intrinsics_right.yaml  log.txt  rightoutcamera_opencvdataset.xml
guidance/calibration_files/calibration_results/made with 640x480 images/: extrinsics.yml  extrinsics2.yml  extrinsics_onceuponatime.yml  intrinsics2.yml  intrinsics_onceuponatime.yml  intrinsics_withfinalframes.yml  leftoutcamera_opencvdataset.xml  mini_mono_left_camera.xml
guidance/calibration_results/: extrinsics_down.yaml  extrinsics_front.yaml  extrinsics_rear.yaml  frames.gv  intrinsics_baseline147_data149.yml  intrinsics_down.yaml  intrinsics_left.yaml  leftoutcamera_opencvdataset.xml  out_camera_data.xml  outcamera_opencvdataset.xml
guidance/calibration_results/made with 640x480 images/: djiextri.yml  djiintri.yml  extrinsics150.yml  intrinsics150.yml  mini_mono_left_camera.html  mini_mono_right_camera.xml
guidance/launch/: checklidarnao.launch  slam.launch
guidance/msg/: sonar_info.msg  sonar_info.msg~
guidance/nodes/: armarker_subscriber.cpp  armarker_subscriber.cpp~  camerainfo_publisher.cpp  frames.gv  initialpose_pub.cpp  laserscan_transform_toNao.cpp  log.txt  maptomarker_tf.cpp  nao_laser.cpp  tf_publisher.cpp
guidance/src/: FullCameraSimpleNode.cpp  FullCameras.cpp  FullCameras.cpp~  FullCamerasSonars_save.cpp  GuidanceNode.cpp  GuidanceNode.cpp~  a.cpp  a.cppp  allCamerasSonars_save.cpp  b.cpp  calibratesingle_camera.cpp  camerasinfo_publisher.cpp  fordelete.cpp  frames.gv  log.txt  node.cpp  node.cpp~  test_yaml.cpp  tf_publisher.cpp  tf_publisher_guid.cpp
human/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
human/nrc/: b.cpp  b.cpp~  descriptor_extractor_matcher.cpp  descriptor_extractor_matcher.cpp~  stereo_match.cpp
human/src/: hog.cpp  multi_sm.cpp  simple_pub.cpp  simple_pub.cpp~  svm_trainer.cpp  talker.cpp  tool.cpp  tool.cpp~
src/: .hog.cpp.swp  diko.cpp  hog.cpp  hog_64.cpp
wls/: CMakeCache.txt  CMakeLists.txt  DisplayImage  HOG.xml  Makefile  cmake_install.cmake  compile_commands.json  disparity  disparity_filters.cpp  f16.xml  f162.xml  roi_coords.txt  star.xml  track  track.cpp  train_HOG  train_HOG.cpp  videos  videos.cpp  wls  wls.cpp
